fixes faulty new house cover image cropping

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,16 +39,18 @@
   letter-spacing:0.32rem;
   text-shadow:2px 4px snow,
               4px 6px 22px dimgray;
+
 }
 
-.coverImage {
-  cursor:pointer;
-  box-shadow:2px 2px 33px black;
+.bookInnerContainer {
+  background:black;
+  box-shadow:2px 2px 50px black;
   transition:2s transform;
   transform:rotate(2deg);
+  cursor:pointer;
 }
 
-.coverImage:hover {
+.bookInnerContainer:hover {
   opacity:0.7;
   transform:rotate(-6deg);
 }
